I changed it back

--- a/Retrieving source organism name from accession number.ipynb
+++ b/Retrieving source organism name from accession number.ipynb
@@ -1423,7 +1423,7 @@
     "        print(var_output_line)\n",
     "        \n",
     "    else:\n",
-    "        output_file_source_organism_names.write(line)   # This is...\n",
+    "        output_file_source_organism_names.write(line)   \n",
     "        print(line)\n",
     "    \n",
     "input_file.close()\n",
